Added messenger message handlers
